--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -36,36 +36,30 @@ figure img {
 /* style.css */
 #hero {
   position: relative;
-  height: 100vh;
-  overflow: hidden;
-}
-
-#hero video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#hero h1,
-#hero .subtitle {
-  position: absolute;
-  width: 100%;
   text-align: center;
+  background-color: #000;
   color: white;
-  z-index: 2;
-  margin: 0;
+}
+
+#hero img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  max-height: 75vh;
+  display: block;
+  margin: 0 auto;
 }
 
 #hero h1 {
-  top: 40%;
-  font-size: 3rem;
-  font-weight: 700;
-  text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.6);
+  margin-top: 1.5rem;
+  font-size: 2.2rem;
+  font-weight: 600;
+  color: #222;
 }
 
 #hero .subtitle {
-  top: 50%;
-  font-size: 1.2rem;
-  font-style: italic;
-  text-shadow: 0px 1px 6px rgba(0, 0, 0, 0.5);
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  color: #666;
+  font-style: normal;
 }
