--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -65,3 +65,16 @@ figure img {
   margin-bottom: 1rem;
   text-shadow: none;
 }
+#hero .authors {
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 1.5rem;
+  line-height: 1.4;
+}
+
+#hero .team {
+  display: block;
+  font-size: 0.95rem;
+  color: #888;
+  font-style: italic;
+}
