--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -78,3 +78,9 @@ figure img {
   color: #888;
   font-style: italic;
 }
+figcaption {
+  text-align: left;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
