--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -76,7 +76,7 @@ figure img {
   display: block;
   font-size: 0.95rem;
   color: #888;
-  font-style: italic;
+  font-style: normal;
 }
 figcaption {
   text-align: left;
